--- a/index.html
+++ b/index.html
@@ -1,13 +1,95 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="utf-8" />
     <title></title>
+    <style>
+        .views-element-container {
+            width: 500px;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #F1F1F1;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<pre>
-This will be an awesome site on Henrikh Mkhitaryan!
-</pre>
+    <!--<script type="text/javascript">
+        var a = +prompt("Enter first number", "5");
+        var b = +prompt("Enter second number", "6");
+
+        document.write("a = " + a + "<br/>");
+        document.write("b = "+b+"<br/>");
+        document.write("a + b = " + (a+b) + "<br/>");
+    </script>-->
+<article class="views-element-container" id="block-views-block-fixtures-page-block-4">
+
+    <div class="card card--dark card--padded fixture-card fixture-card--is-link" data-eq-pts="xsmall: 200, small: 550, medium: 640, large: 768" data-eq-state="xsmall">
+        <header class="card__header">
+            <h3 id="fixture-card-25511" class="visually-hidden">Östersunds FK - Thu Feb 22 - 20:05</h3>
+
+            <div class="event-info">
+                <div class="event-info__date">Thu Feb 22 - 20:05</div>    <div class="event-info__venue">Emirates Stadium</div>
+                <div class="broadcaster">
+                    <img src="https://www.arsenal.com/sites/default/files/styles/small/public/logos/btsport_0.png?itok=AMZF8X0f" alt="BT Sport">
+                    <!-- kara lini TV company-i anun@, orinak Shant TV -->
+                </div>
+                <div class="event-info__extra">Europa League</div>
+            </div>
+            <img src="https://www.arsenal.com/sites/default/files/styles/small/public/logos/Unknown.png?itok=54n2yyju" class="fixture-card__league-icon" alt="Europa League">
+
+
+        </header>
+
+        <div class="card__content">
+            <div class="fixture-match" data-eq-pts="small: 250, medium: 465, large: 556" data-eq-state="small">
+                <div class="fixture-match__team">
+                    <figure class="team-crest">
+                        <img src="https://www.arsenal.com/sites/default/files/styles/feed_crest_thumbnail/public/logos/arsenal.png?itok=gaU3837L" class="team-crest__crest" alt="  Arsenal
+   crest">
+                        <div class="team-crest__content">
+                            <figcaption class="team-crest__name">
+                                <div class="team-crest__name-value">Arsenal</div>
+                            </figcaption>
+                        </div>
+                    </figure>
+
+                </div>
+                <div class="fixture-match__versus">
+                    <div class="versus-icon"></div>
+                </div>
+                <div class="fixture-match__team">
+                    <figure class="team-crest">
+                        <img src="https://www.arsenal.com/sites/default/files/styles/feed_crest_thumbnail/public/logos/Ostersunds.png?itok=avJlENUN" class="team-crest__crest" alt="  Östersunds FK
+   crest">
+                        <div class="team-crest__content">
+                            <figcaption class="team-crest__name">
+                                <div class="team-crest__name-value">Östersunds FK</div>
+                            </figcaption>
+                        </div>
+                    </figure>
+
+                </div>
+            </div>
+
+
+        </div>
+
+
+    </div>
+</article>
+<!--<script>
+    var w = $(window).width();
+    var h = $(window).height();
+    var d = document.getElementById("block-views-block-fixtures-page-block-4");
+    var divW = $(d).width();
+    var divH = $(d).height();
+
+    d.style.position="absolute";
+    d.style.top = (h/2)-(divH/2)+"px";
+    d.style.left = (w/2)-(divW/2)+"px";
+</script>-->
 </body>
 </html>
