--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
           integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="icon" type="image/x-icon" href="static/briefcase.png">
 </head>
 <body class="main-content">
 <header class="section sec1 header active" id="home">
@@ -408,7 +409,7 @@
                             <span>Location</span>
                         </div>
                         <p>
-                            : Yerevan, Armenia
+                            : Vienna, Austria
                         </p>
                     </div>
                     <div class="contact-item">
@@ -427,15 +428,6 @@
                         </div>
                         <p>
                             <span>: Université de Poitiers, France</span>
-                        </p>
-                    </div>
-                    <div class="contact-item">
-                        <div class="icon">
-                            <i class="fas fa-user-graduate"></i>
-                            <span>Mobile Number</span>
-                        </div>
-                        <p>
-                            <span>: 37441325253</span>
                         </p>
                     </div>
                     <div class="contact-item">
