--- a/index.html
+++ b/index.html
@@ -175,7 +175,19 @@
                 <div class="tl-icon">
                     <i class="fas fa-briefcase"></i>
                 </div>
-                <p class="tl-duration">2020-present</p>
+                <p class="tl-duration">09.2022 – present</p>
+                <h5>.Net developer<span> - International Atomic Energy Agency (IAEA)</span></h5>
+                <p>
+                    Application maintenance.
+                    Bug fixing and adding new features.
+                    Upgrading obsolete parts.
+                </p>
+            </div>
+            <div class="timeline-item">
+                <div class="tl-icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
+                <p class="tl-duration">03.2021-09.2022</p>
                 <h5>.Net developer<span> - DataArt</span></h5>
                 <p>
                     New application parts architecture development.
