--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Or just grab my CV by clicking the button below.
             </p>
             <div class="btn-con">
-                <a href="static/Aram%20CV%20in%20english%20031221.docx" download="cv" class="main-btn">
+                <a href="static/Aram%20CV%20in%20english%20211122.pdf" download="cv" class="main-btn">
                     <span class="btn-txt">Download CV</span>
                     <span class="btn-icon">
                     <i class="fas fa-download"></i>
@@ -490,7 +490,7 @@
                             </span>
                         </a>
                         
-                        <a href="static/Aram%20CV%20in%20english%20031221.docx" download="aram_zhamkochyan_cv" class="main-btn">
+                        <a href="static/Aram%20CV%20in%20english%20211122.pdf" download="aram_zhamkochyan_cv" class="main-btn">
                             <span class="btn-txt">Download CV</span>
                             <span class="btn-icon">
                                 <i class="fas fa-download"></i>
