--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@
 <div class="theme-btn">
     <i class="fas fa-adjust"></i>
 </div>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
+<script src="js/fancyWord.js"></script>
 </body>
 </html>
