--- a/index.html
+++ b/index.html
@@ -24,24 +24,28 @@
         </div>
         <div class="right-header">
             <h1 class="name">
-                <div id="text">
-                    <div class="line">
-                        <p class="word">Hi,</p>
-                        <p class="word">I'm</p>
-                        <p class="word">A</p>
-                        <a class="word fancy special-link">.Net</a>
-                        <p class="word">Developer</p>
-                      </div>
-                      <div class="line">
-                        <p class="word">welcome</p>
-                        <p class="word">to</p>
-                        <p class="word">my</p>
-                        <p class="word">page!!</p>
-                      </div>
-                      <div class="line">    
-                        <p class="word">I'm</p>
-                        <a class="word fancy special-link">Aram Zhamkochyan</a>
-                      </div>
+                <div class="mobile-only">
+                    Hi, I'm <span>Aram Zhamkochyan</span>
+                    A .Net Developer.
+                </div>
+                <div class="desktop-only">
+                  <div class="line">
+                    <p class="word">Hi,</p>
+                    <p class="word">I'm</p>
+                    <p class="word">A</p>
+                    <a class="word fancy special-link">.Net</a>
+                    <p class="word">Developer</p>
+                  </div>
+                  <div class="line">
+                    <p class="word">welcome</p>
+                    <p class="word">to</p>
+                    <p class="word">my</p>
+                    <p class="word">page!!</p>
+                  </div>
+                  <div class="line">    
+                    <p class="word">I'm</p>
+                    <a class="word fancy special-link">Aram Zhamkochyan</a>
+                  </div>
                 </div>
             </h1>
             <p>
