--- a/index.html
+++ b/index.html
@@ -51,7 +51,25 @@
             <p>
                 I'm a .Net Developer, I love to create elegant and robust applications.
                 <br/>
-                Please feel free to contact me by any possible ways presented in the 'Contact me' section.
+                Please feel free to contact me by any possible ways presented in the 
+                <span class="magic">
+                    <span class="magic-star">
+                      <svg viewBox="0 0 512 512">
+                      <path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" />
+                      </svg>
+                    </span>
+                    <span class="magic-star">
+                      <svg viewBox="0 0 512 512">
+                      <path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" />
+                      </svg>
+                    </span>
+                    <span class="magic-star">
+                      <svg viewBox="0 0 512 512">
+                      <path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" />
+                      </svg>
+                    </span>
+                    <span class="magic-text">Contact me</span>
+                  </span> section.
                 <br/>
                 Or just grab my CV by clicking the button below.
             </p>
@@ -546,5 +564,6 @@
 </div>
 <script src="js/app.js"></script>
 <script src="js/fancyWord.js"></script>
+<script src="js/textEffect.js"></script>
 </body>
 </html>
