--- a/index.html
+++ b/index.html
@@ -122,28 +122,28 @@
                     </a>
                 </div>
             </div>
-            <div class="right-about">
-                <div class="about-item">
-                    <div class="abt-text">
-                        <p class="large-text">500+</p>
+            <div id="cards">
+                <div class="card">
+                    <div class="card-content">
+                        <p class="large-text">0.5+</p>
                         <p class="small-text">Projects<br/> Completed</p>
                     </div>
                 </div>
-                <div class="about-item">
-                    <div class="abt-text">
+                <div class="card">
+                    <div class="card-content">
                         <p class="large-text">5+</p>
                         <p class="small-text">Years of<br/> Experience</p>
                     </div>
                 </div>
-                <div class="about-item">
-                    <div class="abt-text">
-                        <p class="large-text">100+</p>
+                <div class="card">
+                    <div class="card-content">
+                        <p class="large-text">0.5+</p>
                         <p class="small-text">Happy<br/> Clients</p>
                     </div>
                 </div>
-                <div class="about-item">
-                    <div class="abt-text">
-                        <p class="large-text">400+</p>
+                <div class="card">
+                    <div class="card-content">
+                        <p class="large-text">0.5+</p>
                         <p class="small-text">Customer<br/> Reviews</p>
                     </div>
                 </div>
