--- a/index.html
+++ b/index.html
@@ -565,5 +565,6 @@
 <script src="js/app.js"></script>
 <script src="js/fancyWord.js"></script>
 <script src="js/textEffect.js"></script>
+<script src="js/hoverEffect.js"></script>
 </body>
 </html>
