--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <p class="tl-duration">03.2021-09.2022</p>
                 <h5>.Net developer<span> - DataArt</span></h5>
                 <p>
-                    New application parts architecture development.
+                    Elaborating backend architecture.
                     Performing code reviews.
                     Onboarding new team members.
                 </p>
