--- a/index.html
+++ b/index.html
@@ -463,7 +463,9 @@
                   <i class="fas fa-map-marker-alt"></i>
                   <span>Location</span>
                 </div>
-                <p> : Vienna, Austria </p>
+                <p>
+					<span data-value="Vienna, Austria">Vienna, Austria</span>
+				</p>
               </div>
               <div class="contact-item">
                 <div class="icon">
@@ -471,7 +473,7 @@
                   <span>Email</span>
                 </div>
                 <p>
-                  <span>: aramzham@hotmail.com</span>
+                  <span data-value="aramzham@hotmail.com">aramzham@hotmail.com</span>
                 </p>
               </div>
               <div class="contact-item">
@@ -480,7 +482,7 @@
                   <span>Education</span>
                 </div>
                 <p>
-                  <span>: Université de Poitiers, France</span>
+                  <span data-value="Université de Poitiers, France">Université de Poitiers, France</span>
                 </p>
               </div>
               <div class="contact-item">
@@ -489,7 +491,7 @@
                   <span>Languages</span>
                 </div>
                 <p>
-                  <span>: Armenian, Russian, English, French, Spanish</span>
+                  <span data-value="Armenian, Russian, English, French, Spanish">Armenian, Russian, English, French, Spanish</span>
                 </p>
               </div>
             </div>
@@ -566,5 +568,6 @@
     <script src="js/textEffect.js"></script>
     <script src="js/hoverEffect.js"></script>
     <script src="js/noiseEffect.js"></script>
+	<script src="js/hackedTextEffect.js"></script>
   </body>
 </html>
