--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <span class="magic-text">Contact me</span>
             </span> section. <br /> Or just grab my CV by clicking the button below. </p>
           <div class="btn-con">
-            <a href="static/Aram%20CV%20in%20english%20211122.pdf" download="cv" class="main-btn">
+            <a href="static/cv.pdf" download="cv" class="main-btn">
               <span class="btn-txt">Download CV</span>
               <span class="btn-icon">
                 <i class="fas fa-download"></i>
@@ -531,7 +531,7 @@
                     <i class="fa-solid fa-paper-plane"></i>
                   </span>
                 </a>
-                <a href="static/Aram%20CV%20in%20english%20211122.pdf" download="aram_zhamkochyan_cv" class="main-btn">
+                <a href="static/cv.pdf" download="aram_zhamkochyan_cv" class="main-btn">
                   <span class="btn-txt">Download CV</span>
                   <span class="btn-icon">
                     <i class="fas fa-download"></i>
